# desafio6-prof-artemisia

./: .env.example  README.md  main.py  pyproject.toml
src/auth/: spotify_auth.py
src/spotify_endpoints/: endpoints.py
