[project]
name = "desafio6-prof-artemisia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "ipykernel>=6.29.5",
    "ipynb>=0.5.1",
    "keyring>=25.6.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "requests-oauthlib>=2.0.0",
    "uvicorn>=0.35.0",
]
